fix: correct center alignment of icon only button icon

--- a/packages/components/bolt-button/src/button.scss
+++ b/packages/components/bolt-button/src/button.scss
@@ -205,5 +205,6 @@ bolt-button[width='full@small'],
   display: inline-flex;
   vertical-align: middle;
   align-self: center;
+  text-align: center; // Horizontally center icons
   line-height: 1; // workaround so icons can be vertically aligned properly
 }
